# skills-jk

./: .env.1password.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/: CODEOWNERS
.github/scripts/: create-pr.sh  pyproject.toml  respond-to-review.sh
.github/scripts/respond_to_review/: __init__.py  clients.py  config.py  handler.py  main.py
.github/scripts/tests/: __init__.py  conftest.py  test_clients.py  test_config.py  test_handler.py
.hermes/: .gitignore  INSTALLATION.md  README.md  config.yaml  config.yml
agents/: README.md  atlas.md
config/: cc-codex-debate-review.yml  docs-redirect-map.json  gsc-sites.json  pr-auto-review.yml
docs/: bot-authorship.md  hermes-gateway-watchdog.md  lsp-setup.md  pr-conventions.md  repository-visibility.md  runner-setup.md  setup-runners.md
projects/: README.md
reports/: 2026-02-02-querypie-domains-overview.md  2026-02-02-seo-analysis-aip-docs.md  2026-02-02-seo-analysis-app-querypie.md  2026-02-02-seo-analysis-docs-querypie.md  2026-02-02-seo-analysis-www-querypie.md  2026-02-03-seo-analysis-aip-docs-enhanced.md  2026-02-03-seo-analysis-app-querypie-enhanced.md  2026-02-03-seo-analysis-docs-querypie-enhanced.md  2026-02-03-seo-analysis-www-querypie-enhanced.md  2026-02-09-seo-status-report.md  2026-02-15-seo-status-report.md  2026-03-31-homepage-content-gsc-report.md  2026-03-31-homepage-content-pv-report.md  2026-06-16-ga4-utm-like-querypie-report.md  debate-review-startup-latency.md  gsc-404-analysis-2026-02-06.md  gsc-all-sites-analysis-2026-02-06.md  (+3 more)
skills/: README.md
(+1229 files in other folders)
